<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>uk.ac.ucl.rits.inform</groupId>
  <artifactId>HL7Processor</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>HL7Processor</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>

  </properties>


  <dependencies>

    <dependency>
      <groupId>com.puppycrawl.tools</groupId>
      <artifactId>checkstyle</artifactId>
      <version>8.16</version>
    </dependency>



    <!-- This is the core HAPI library -->
     <dependency>
       <groupId>ca.uhn.hapi</groupId>
       <artifactId>hapi-base</artifactId>
       <version>2.3</version>
    </dependency>


	<!-- hapi-examples-2.3.jar -->		
	<!-- slf4j-api-1.7.10.jar -->


 
    <!-- Structure JAR for HL7.  -->
    <!-- HL7 v2.7 -->
    <dependency>
      <groupId>ca.uhn.hapi</groupId>
      <artifactId>hapi-structures-v27</artifactId>
      <version>2.3</version>
    </dependency>
  
    <!-- log4j, for use with HAPI -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>1.7.10</version>
    </dependency>
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.17</version>
    </dependency> 

    <!-- HL7 over HTTP. Probably not needed. -->
    <dependency>
      <groupId>ca.uhn.hapi</groupId>
      <artifactId>hapi-hl7overhttp</artifactId>
      <version>2.2</version>
    </dependency>


   <!-- JSON for Java -->
   <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
    <dependency>
      <groupId>com.googlecode.json-simple</groupId>
      <artifactId>json-simple</artifactId>
      <version>1.1.1</version>
   </dependency>


   <!-- Postgres SQL JDBC driver --> 
   <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
   <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>42.2.5</version>
   </dependency>


    <!-- Junit --> 
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>

   <!-- Mockito -->
   <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
   <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>2.23.4</version>
      <scope>test</scope>
   </dependency>

  </dependencies>


  <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <!-- see: https://stackoverflow.com/questions/53010200/maven-surefire-could-not-find-forkedbooter-class -->
						        <argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m -Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
                    <includes>
                        <include>*Test.java</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
               <groupId>org.codehaus.mojo</groupId>
               <artifactId>exec-maven-plugin</artifactId>
               <version>1.6.0</version>
               <executions>
                  <execution>
                     <goals>
                        <goal>java</goal>
                     </goals>
                  </execution>
                </executions>
            </plugin>
            <plugin>
               <groupId>com.github.spotbugs</groupId>
               <artifactId>spotbugs-maven-plugin</artifactId>
               <version>3.1.8</version>
               <dependencies>
                  <!-- overwrite dependency on spotbugs if you want to specify the version of spotbugs -->
                  <dependency>
                      <groupId>com.github.spotbugs</groupId>
                      <artifactId>spotbugs</artifactId>
                      <version>3.1.9</version>
                 </dependency>
              </dependencies>
           </plugin>
           
        </plugins>
    </build>
    
    <reporting>
       <plugins>
           <plugin>
           <!-- https://maven.apache.org/plugins/maven-pmd-plugin/usage.html -->
           <!-- This can be moved to the build section if required -->
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-pmd-plugin</artifactId>
              <version>3.11.0</version>
              <configuration>
                <linkXref>true</linkXref>
                <sourceEncoding>utf-8</sourceEncoding>
                <minimumTokens>100</minimumTokens>
                <targetJdk>1.8</targetJdk>
                <excludes>
                  <exclude>**/*Bean.java</exclude>
                  <exclude>**/generated/*.java</exclude>
                </excludes>
                <excludeRoots>
                  <excludeRoot>target/generated-sources/stubs</excludeRoot>
                </excludeRoots>
              </configuration>
            </plugin>
          </plugins>
        </reporting>

</project>
